org.eclipse.fennec.codec.cql2/src-gen/org/eclipse/fennec/codec/cql2/antlr/CQL2Parser.java
// Generated from /opt/git/emf.ogc.features/org.eclipse.fennec.codec.cql2/grammar/CQL2.g4 by ANTLR 4.13.2
package org.eclipse.fennec.codec.cql2.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CQL2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, NOT=3, LIKE=4, BETWEEN=5, IN=6, IS=7, NULL=8, TRUE=9, FALSE=10, 
		DATE=11, TIMESTAMP=12, BBOX=13, POINT=14, LINESTRING=15, POLYGON=16, MULTIPOINT=17, 
		MULTILINESTRING=18, MULTIPOLYGON=19, GEOMETRYCOLLECTION=20, Z=21, S_INTERSECTS=22, 
		S_EQUALS=23, S_DISJOINT=24, S_TOUCHES=25, S_WITHIN=26, S_OVERLAPS=27, 
		S_CROSSES=28, S_CONTAINS=29, EQ=30, NE=31, LE=32, GE=33, LT=34, GT=35, 
		LPAREN=36, RPAREN=37, COMMA=38, NUMBER=39, STRING=40, QUOTED_IDENTIFIER=41, 
		IDENTIFIER=42, WS=43;
	public static final int
		RULE_filter = 0, RULE_booleanExpression = 1, RULE_booleanTerm = 2, RULE_booleanFactor = 3, 
		RULE_booleanPrimary = 4, RULE_predicate = 5, RULE_comparisonOperator = 6, 
		RULE_spatialFunction = 7, RULE_scalarExpression = 8, RULE_booleanLiteral = 9, 
		RULE_propertyName = 10, RULE_geomExpression = 11, RULE_bbox = 12, RULE_spatialInstance = 13, 
		RULE_pointMember = 14, RULE_polygonText = 15, RULE_positionList = 16, 
		RULE_position = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"filter", "booleanExpression", "booleanTerm", "booleanFactor", "booleanPrimary", 
			"predicate", "comparisonOperator", "spatialFunction", "scalarExpression", 
			"booleanLiteral", "propertyName", "geomExpression", "bbox", "spatialInstance", 
			"pointMember", "polygonText", "positionList", "position"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'AND'", "'OR'", "'NOT'", "'LIKE'", "'BETWEEN'", "'IN'", "'IS'", 
			"'NULL'", "'TRUE'", "'FALSE'", "'DATE'", "'TIMESTAMP'", "'BBOX'", "'POINT'", 
			"'LINESTRING'", "'POLYGON'", "'MULTIPOINT'", "'MULTILINESTRING'", "'MULTIPOLYGON'", 
			"'GEOMETRYCOLLECTION'", "'Z'", "'S_INTERSECTS'", "'S_EQUALS'", "'S_DISJOINT'", 
			"'S_TOUCHES'", "'S_WITHIN'", "'S_OVERLAPS'", "'S_CROSSES'", "'S_CONTAINS'", 
			"'='", "'<>'", "'<='", "'>='", "'<'", "'>'", "'('", "')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "OR", "NOT", "LIKE", "BETWEEN", "IN", "IS", "NULL", "TRUE", 
			"FALSE", "DATE", "TIMESTAMP", "BBOX", "POINT", "LINESTRING", "POLYGON", 
			"MULTIPOINT", "MULTILINESTRING", "MULTIPOLYGON", "GEOMETRYCOLLECTION", 
			"Z", "S_INTERSECTS", "S_EQUALS", "S_DISJOINT", "S_TOUCHES", "S_WITHIN", 
			"S_OVERLAPS", "S_CROSSES", "S_CONTAINS", "EQ", "NE", "LE", "GE", "LT", 
			"GT", "LPAREN", "RPAREN", "COMMA", "NUMBER", "STRING", "QUOTED_IDENTIFIER", 
			"IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CQL2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CQL2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FilterContext extends ParserRuleContext {
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CQL2Parser.EOF, 0); }
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitFilter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_filter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			booleanExpression();
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanExpressionContext extends ParserRuleContext {
		public List<BooleanTermContext> booleanTerm() {
			return getRuleContexts(BooleanTermContext.class);
		}
		public BooleanTermContext booleanTerm(int i) {
			return getRuleContext(BooleanTermContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(CQL2Parser.OR); }
		public TerminalNode OR(int i) {
			return getToken(CQL2Parser.OR, i);
		}
		public BooleanExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitBooleanExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanExpressionContext booleanExpression() throws RecognitionException {
		BooleanExpressionContext _localctx = new BooleanExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_booleanExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			booleanTerm();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(40);
				match(OR);
				setState(41);
				booleanTerm();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanTermContext extends ParserRuleContext {
		public List<BooleanFactorContext> booleanFactor() {
			return getRuleContexts(BooleanFactorContext.class);
		}
		public BooleanFactorContext booleanFactor(int i) {
			return getRuleContext(BooleanFactorContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(CQL2Parser.AND); }
		public TerminalNode AND(int i) {
			return getToken(CQL2Parser.AND, i);
		}
		public BooleanTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanTerm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitBooleanTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanTermContext booleanTerm() throws RecognitionException {
		BooleanTermContext _localctx = new BooleanTermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_booleanTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			booleanFactor();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(48);
				match(AND);
				setState(49);
				booleanFactor();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanFactorContext extends ParserRuleContext {
		public BooleanPrimaryContext booleanPrimary() {
			return getRuleContext(BooleanPrimaryContext.class,0);
		}
		public TerminalNode NOT() { return getToken(CQL2Parser.NOT, 0); }
		public BooleanFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanFactor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitBooleanFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanFactorContext booleanFactor() throws RecognitionException {
		BooleanFactorContext _localctx = new BooleanFactorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_booleanFactor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(55);
				match(NOT);
				}
			}

			setState(58);
			booleanPrimary();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanPrimaryContext extends ParserRuleContext {
		public BooleanPrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanPrimary; }
	 
		public BooleanPrimaryContext() { }
		public void copyFrom(BooleanPrimaryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BooleanPrimaryLiteralContext extends BooleanPrimaryContext {
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public BooleanPrimaryLiteralContext(BooleanPrimaryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitBooleanPrimaryLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NestedContext extends BooleanPrimaryContext {
		public TerminalNode LPAREN() { return getToken(CQL2Parser.LPAREN, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CQL2Parser.RPAREN, 0); }
		public NestedContext(BooleanPrimaryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitNested(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PredicatePrimaryContext extends BooleanPrimaryContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public PredicatePrimaryContext(BooleanPrimaryContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitPredicatePrimary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanPrimaryContext booleanPrimary() throws RecognitionException {
		BooleanPrimaryContext _localctx = new BooleanPrimaryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_booleanPrimary);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new NestedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				match(LPAREN);
				setState(61);
				booleanExpression();
				setState(62);
				match(RPAREN);
				}
				break;
			case 2:
				_localctx = new PredicatePrimaryContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				predicate();
				}
				break;
			case 3:
				_localctx = new BooleanPrimaryLiteralContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				booleanLiteral();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PredicateContext extends ParserRuleContext {
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
	 
		public PredicateContext() { }
		public void copyFrom(PredicateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BinaryComparisonContext extends PredicateContext {
		public List<ScalarExpressionContext> scalarExpression() {
			return getRuleContexts(ScalarExpressionContext.class);
		}
		public ScalarExpressionContext scalarExpression(int i) {
			return getRuleContext(ScalarExpressionContext.class,i);
		}
		public ComparisonOperatorContext comparisonOperator() {
			return getRuleContext(ComparisonOperatorContext.class,0);
		}
		public BinaryComparisonContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitBinaryComparison(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SpatialPredicateContext extends PredicateContext {
		public SpatialFunctionContext spatialFunction() {
			return getRuleContext(SpatialFunctionContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(CQL2Parser.LPAREN, 0); }
		public List<GeomExpressionContext> geomExpression() {
			return getRuleContexts(GeomExpressionContext.class);
		}
		public GeomExpressionContext geomExpression(int i) {
			return getRuleContext(GeomExpressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(CQL2Parser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(CQL2Parser.RPAREN, 0); }
		public SpatialPredicateContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitSpatialPredicate(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InPredicateContext extends PredicateContext {
		public List<ScalarExpressionContext> scalarExpression() {
			return getRuleContexts(ScalarExpressionContext.class);
		}
		public ScalarExpressionContext scalarExpression(int i) {
			return getRuleContext(ScalarExpressionContext.class,i);
		}
		public TerminalNode IN() { return getToken(CQL2Parser.IN, 0); }
		public TerminalNode LPAREN() { return getToken(CQL2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CQL2Parser.RPAREN, 0); }
		public TerminalNode NOT() { return getToken(CQL2Parser.NOT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CQL2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CQL2Parser.COMMA, i);
		}
		public InPredicateContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitInPredicate(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BetweenPredicateContext extends PredicateContext {
		public List<ScalarExpressionContext> scalarExpression() {
			return getRuleContexts(ScalarExpressionContext.class);
		}
		public ScalarExpressionContext scalarExpression(int i) {
			return getRuleContext(ScalarExpressionContext.class,i);
		}
		public TerminalNode BETWEEN() { return getToken(CQL2Parser.BETWEEN, 0); }
		public TerminalNode AND() { return getToken(CQL2Parser.AND, 0); }
		public TerminalNode NOT() { return getToken(CQL2Parser.NOT, 0); }
		public BetweenPredicateContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitBetweenPredicate(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IsNullPredicateContext extends PredicateContext {
		public ScalarExpressionContext scalarExpression() {
			return getRuleContext(ScalarExpressionContext.class,0);
		}
		public TerminalNode IS() { return getToken(CQL2Parser.IS, 0); }
		public TerminalNode NULL() { return getToken(CQL2Parser.NULL, 0); }
		public TerminalNode NOT() { return getToken(CQL2Parser.NOT, 0); }
		public IsNullPredicateContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitIsNullPredicate(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LikePredicateContext extends PredicateContext {
		public List<ScalarExpressionContext> scalarExpression() {
			return getRuleContexts(ScalarExpressionContext.class);
		}
		public ScalarExpressionContext scalarExpression(int i) {
			return getRuleContext(ScalarExpressionContext.class,i);
		}
		public TerminalNode LIKE() { return getToken(CQL2Parser.LIKE, 0); }
		public TerminalNode NOT() { return getToken(CQL2Parser.NOT, 0); }
		public LikePredicateContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitLikePredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_predicate);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new BinaryComparisonContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				scalarExpression();
				setState(69);
				comparisonOperator();
				setState(70);
				scalarExpression();
				}
				break;
			case 2:
				_localctx = new LikePredicateContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				scalarExpression();
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(73);
					match(NOT);
					}
				}

				setState(76);
				match(LIKE);
				setState(77);
				scalarExpression();
				}
				break;
			case 3:
				_localctx = new BetweenPredicateContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				scalarExpression();
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(80);
					match(NOT);
					}
				}

				setState(83);
				match(BETWEEN);
				setState(84);
				scalarExpression();
				setState(85);
				match(AND);
				setState(86);
				scalarExpression();
				}
				break;
			case 4:
				_localctx = new InPredicateContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				scalarExpression();
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(89);
					match(NOT);
					}
				}

				setState(92);
				match(IN);
				setState(93);
				match(LPAREN);
				setState(94);
				scalarExpression();
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(95);
					match(COMMA);
					setState(96);
					scalarExpression();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				match(RPAREN);
				}
				break;
			case 5:
				_localctx = new IsNullPredicateContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				scalarExpression();
				setState(105);
				match(IS);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(106);
					match(NOT);
					}
				}

				setState(109);
				match(NULL);
				}
				break;
			case 6:
				_localctx = new SpatialPredicateContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				spatialFunction();
				setState(112);
				match(LPAREN);
				setState(113);
				geomExpression();
				setState(114);
				match(COMMA);
				setState(115);
				geomExpression();
				setState(116);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparisonOperatorContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(CQL2Parser.EQ, 0); }
		public TerminalNode NE() { return getToken(CQL2Parser.NE, 0); }
		public TerminalNode LT() { return getToken(CQL2Parser.LT, 0); }
		public TerminalNode LE() { return getToken(CQL2Parser.LE, 0); }
		public TerminalNode GT() { return getToken(CQL2Parser.GT, 0); }
		public TerminalNode GE() { return getToken(CQL2Parser.GE, 0); }
		public ComparisonOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonOperator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitComparisonOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonOperatorContext comparisonOperator() throws RecognitionException {
		ComparisonOperatorContext _localctx = new ComparisonOperatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparisonOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 67645734912L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SpatialFunctionContext extends ParserRuleContext {
		public TerminalNode S_INTERSECTS() { return getToken(CQL2Parser.S_INTERSECTS, 0); }
		public TerminalNode S_EQUALS() { return getToken(CQL2Parser.S_EQUALS, 0); }
		public TerminalNode S_DISJOINT() { return getToken(CQL2Parser.S_DISJOINT, 0); }
		public TerminalNode S_TOUCHES() { return getToken(CQL2Parser.S_TOUCHES, 0); }
		public TerminalNode S_WITHIN() { return getToken(CQL2Parser.S_WITHIN, 0); }
		public TerminalNode S_OVERLAPS() { return getToken(CQL2Parser.S_OVERLAPS, 0); }
		public TerminalNode S_CROSSES() { return getToken(CQL2Parser.S_CROSSES, 0); }
		public TerminalNode S_CONTAINS() { return getToken(CQL2Parser.S_CONTAINS, 0); }
		public SpatialFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spatialFunction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CQL2Visitor ) return ((CQL2Visitor<? extends T>)visitor).visitSpatialFunction(this);
			else return visitor.visitChildren(this);
		}
	}
